# devutils

./: .gitignore  README.md
crcutils_api/: LICENSE.txt  README.md  pyproject.toml
crcutils_api/crcutils/: __init__.py  main.py
crcutils_api/tests/: test.py
frankfurter_api/: README.md  main.py  pyproject.toml  requirements-dev.txt  test.py
webscraping/: main.py
